//返回登录结果
message ResLoginPacket {  
// 登录结果
optional string result=1;
// 玩家角色列表
repeated PlayerEntityInfo playerEntityInfos=2;
}
message PlayerEntityInfo {  
// 玩家角色id
optional int64 id=1;
// 性别
optional string sex=2;
// 名字
optional string name=3;
// 角色类型
optional string roleType=4;
}
