//响应账号注册
message RespRegisterPacket {  
// 返回结果
optional string result=1;
}
