//请求创建角色
message ReqCreateRolePacket {  
// 角色名
optional string playerName=1;
// 性别
optional string sex=2;
// 角色类型
optional RoleType roleType=3;
}
enum RoleType {  
WARRIOR=0;
MASTER=1;
TAOIST=2;
}
 