//响应创建角色
message RespCreateRolePacket {  
// 返回结果
optional string result=1;
// 角色id
optional int64 playerId=2;
}
